* Fix {bz: 1457} under FF2 for real; it was showing a stub horizontal scrollbar.
git-svn-id: https://repo.socialtext.net:8999/svn/socialtext/trunk@10801 593ce9bc-2028-0410-bb98-c566b643a948

--- a/nlw/share/skin/s3/css/screen.css
+++ b/nlw/share/skin/s3/css/screen.css
@@ -21,6 +21,10 @@ body div#contentColumns div#contentLeft {
     overflow-y: hidden !important;
 }
 
+body div#contentColumns div#contentLeft.overflowVisible {
+    overflow: visible !important;
+}
+
 div#contentColumns.hidebox #contentLeft {
     width: 97%;
 }
